<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CryptoChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_screen_adapter">HomeScreenAdapter</string>
    <string name="homescreen_add_contact">Add Contact</string>
    <string name="homescreen_search">Search</string>
    <string name="homescreen_settings">Settings</string>
    <string name="title_activity_conversation">Conversation Activity</string>
    <string name="conversation_newmessage">New message</string>
    <string name="title_activity_add_contact">Add a new contact</string>
    <string name="sample">sample</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="start_conv_button">Start new conversation</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>
    <string name="new_keywords">Generate new keywords</string>
    <string name="title_activity_new_message">Send a new message</string>
    <string name="send_message">Send</string>
    <string name="homescreen_item_name">Name</string>
    <string name="homescreen_item_time"></string>
    <string name="conversation_sender_name">Name</string>
    <string name="conversation_me">Me</string>
    <string name="conversation_me_message">Message</string>
    <string name="conversation_sender_message">Message</string>
    <string name="homescreen_last_message">No Messages</string>
    <string name="conversation_sender_time">Time</string>

</resources>
