<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp" >

    <TextView
        android:id="@+id/conversation_me_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:text="@string/conversation_me" />

    <TextView
        android:id="@+id/conversation_me_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/conversation_me_name"
        android:text="@string/conversation_sender_time" />

    <TextView
        android:id="@+id/conversation_me_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/conversation_me_time"
        android:text="@string/conversation_me_message" />

</RelativeLayout>
